[package]
name = "fakeidgen"
version = "0.1.0"
description = "Generates plausible fake identities"
authors = ["Frédéric van der Essen"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["password", "cryptography"]
categories = ["command-line-utilities", "cryptography"]
homepage = "https://github.com/fvdsn/fakeidgen"
repository = "https://github.com/fvdsn/fakeidgen"
readme = "README.md"

[[bin]]
name = "fakeidgen"
test = true
bench = false

[dependencies]
rand = "0.8.0"
clap = { version = "3.1.6", features = ["derive"] }
